@@ -556,3 +556,5 @@ CHANGES AND BUGFIXES
 	-> bugfix: resetting symbolic image during deletion of document
 	-> PDF export: select your preferred font or use the default one ('FreeSerif') - mainly to cover the different used character sets
 	-> compare versions now also considers tables
+	-> Add 'saveTranscriptDialog' before tools start their job
+
